aap-product-docs-plaintext/red_hat_content/documentation/red_hat_ansible_automation_platform/2.6/containerized_installation/using-custom-tls-certificates.md
# 2. Ansible Automation Platform containerized installation
## 2.7. Advanced configuration options
### 2.7.7. Using custom TLS certificates




Red Hat Ansible Automation Platform uses X.509 certificate and key pairs to secure traffic both internally between Ansible Automation Platform components and externally for public UI and API connections.

There are two primary ways to manage TLS certificates for your Ansible Automation Platform deployment:

1. Ansible Automation Platform generated certificates (this is the default)
1. User-provided certificates


#### 2.7.7.1. Ansible Automation Platform generated certificates




By default, the installation program creates a self-signed Certificate Authority (CA) and uses it to generate self-signed TLS certificates for all Ansible Automation Platform services. The self-signed CA certificate and key are generated on one node under the `~/aap/tls/` directory and copied to the same location on all other nodes. This CA is valid for 10 years after the initial creation date.

Self-signed certificates are not part of any public chain of trust. The installation program creates a certificate truststore that includes the self-signed CA certificate under `~/aap/tls/extracted/` and bind-mounts that directory to each Ansible Automation Platform service container under `/etc/pki/ca-trust/extracted/` . This allows each Ansible Automation Platform component to validate the self-signed certificates of the other Ansible Automation Platform services. The CA certificate can also be added to the truststore of other systems or browsers as needed.

#### 2.7.7.2. User-provided certificates




To use your own TLS certificates and keys to replace some or all of the self-signed certificates generated during installation, you can set specific variables in your inventory file. These certificates and keys must be generated by a public or organizational CA in advance so that they are available during the installation process.

##### 2.7.7.2.1. Using a custom CA to generate all TLS certificates




Use this method when you want Ansible Automation Platform to generate all of the certificates, but you want them signed by a custom CA rather than the default self-signed certificates.

**Procedure**

- To use a custom Certificate Authority (CA) to generate TLS certificates for all Ansible Automation Platform services, set the following variables in your inventory file:


```
ca_tls_cert=&lt;path_to_ca_tls_certificate&gt;    ca_tls_key=&lt;path_to_ca_tls_key&gt;
```




##### 2.7.7.2.2. Providing custom TLS certificates for each service




Use this method if your organization manages TLS certificates outside of Ansible Automation Platform and requires manual provisioning.

**Procedure**

- To manually provide TLS certificates for each individual service (for example, automation controller, automation hub, and Event-Driven Ansible), set the following variables in your inventory file:


```
# Platform gateway    gateway_tls_cert=&lt;path_to_tls_certificate&gt;    gateway_tls_key=&lt;path_to_tls_key&gt;    gateway_pg_tls_cert=&lt;path_to_tls_certificate&gt;    gateway_pg_tls_key=&lt;path_to_tls_key&gt;    gateway_redis_tls_cert=&lt;path_to_tls_certificate&gt;    gateway_redis_tls_key=&lt;path_to_tls_key&gt;        # Automation controller    controller_tls_cert=&lt;path_to_tls_certificate&gt;    controller_tls_key=&lt;path_to_tls_key&gt;    controller_pg_tls_cert=&lt;path_to_tls_certificate&gt;    controller_pg_tls_key=&lt;path_to_tls_key&gt;        # Automation hub    hub_tls_cert=&lt;path_to_tls_certificate&gt;    hub_tls_key=&lt;path_to_tls_key&gt;    hub_pg_tls_cert=&lt;path_to_tls_certificate&gt;    hub_pg_tls_key=&lt;path_to_tls_key&gt;        # Event-Driven Ansible    eda_tls_cert=&lt;path_to_tls_certificate&gt;    eda_tls_key=&lt;path_to_tls_key&gt;    eda_pg_tls_cert=&lt;path_to_tls_certificate&gt;    eda_pg_tls_key=&lt;path_to_tls_key&gt;    eda_redis_tls_cert=&lt;path_to_tls_certificate&gt;    eda_redis_tls_key=&lt;path_to_tls_key&gt;        # PostgreSQL    postgresql_tls_cert=&lt;path_to_tls_certificate&gt;    postgresql_tls_key=&lt;path_to_tls_key&gt;        # Receptor    receptor_tls_cert=&lt;path_to_tls_certificate&gt;    receptor_tls_key=&lt;path_to_tls_key&gt;        # Redis    redis_tls_cert=&lt;path_to_tls_certificate&gt;    redis_tls_key=&lt;path_to_tls_key&gt;
```




##### 2.7.7.2.3. Considerations for certificates provided per service




When providing custom TLS certificates for each individual service, consider the following:

- It is possible to provide unique certificates per host. This requires defining the specific `    _tls_cert` and `    _tls_key` variables in your inventory file as shown in the earlier inventory file example.
- For services deployed across many nodes (for example, when following the enterprise topology), the provided certificate for that service must include the FQDN of all associated nodes in its Subject Alternative Name (SAN) field.
- If an external-facing service (such as automation controller or platform gateway) is deployed behind a load balancer that performs SSL/TLS offloading, the service’s certificate must include the load balancer’s FQDN in its SAN field, in addition to the FQDNs of the individual service nodes.


**Additional resources**

-  [Securing networks](https://docs.redhat.com/en/documentation/red_hat_enterprise_linux/9/html/securing_networks/index)


##### 2.7.7.2.4. Providing a custom CA certificate




When you manually provide TLS certificates, those certificates might be signed by a custom CA. Provide a custom CA certificate to ensure proper authentication and secure communication within your environment. If you have multiple custom CA certificates, you must merge them into a single file.

**Procedure**

- If any of the TLS certificates you manually provided are signed by a custom CA, you must specify the CA certificate by using the following variable in your inventory file:


```
custom_ca_cert=&lt;path_to_custom_ca_certificate&gt;
```

If you have more than one CA certificate, combine them into a single file and reference the combined certificate with the `    custom_ca_cert` variable.




#### 2.7.7.3. Receptor certificate considerations




When using a custom certificate for Receptor nodes, the certificate requires the `otherName` field specified in the Subject Alternative Name (SAN) of the certificate with the value `1.3.6.1.4.1.2312.19.1` . For more information, see [Above the mesh TLS](https://ansible.readthedocs.io/projects/receptor/en/latest/user_guide/tls.html#above-the-mesh-tls) .

Receptor does not support the usage of wildcard certificates. Additionally, each Receptor certificate must have the host FQDN specified in its SAN for TLS hostname validation to be correctly performed.

#### 2.7.7.4. Redis certificate considerations




When using custom TLS certificates for Redis-related services, consider the following for mutual TLS (mTLS) communication if specifying Extended Key Usage (EKU):

- The Redis server certificate ( `    redis_tls_cert` ) should include the `    serverAuth` (web server authentication) and `    clientAuth` (client authentication) EKU.
- The Redis client certificates ( `    gateway_redis_tls_cert` , `    eda_redis_tls_cert` ) should include the `    clientAuth` (client authentication) EKU.


